# thesqrldev-claudecode-toolkit

./: .gitignore  README.ko.md  README.md
.claude-plugin/: marketplace.json  plugin.json
plugins/synod/: .git-sha  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CUTOVER_RUNBOOK.md  INTEGRATION_GUIDE.md  README.ko.md  README.md  RESEARCH_AI_SERVICES.md  RESEARCH_QUICK_REFERENCE.md  RESEARCH_SUMMARY.txt  SECURITY.md  marketplace.json  plugin.json  pyproject.toml  requirements-dev.txt  requirements.txt
plugins/synod/.claude/: AGENTS.md  RESEARCH_STATUS.md
plugins/synod/.claude-plugin/: marketplace.json  plugin.json
plugins/synod/.claude/handoffs/: 2026-01-31_0230_synod-release.md  handoff-20260131-session.md  handoff-20260201-session2.md
plugins/synod/.github/: AGENTS.md
plugins/synod/.github/workflows/: lint.yml  notify-toolkit.yml  test.yml  type-check.yml
plugins/synod/assets/: AGENTS.md
plugins/synod/benchmark/: AGENTS.md  README.md  README_strategy_compare.md  __init__.py  analyze.py  baselines.py  config.yaml  evaluator.py  requirements.txt  run_gsm8k.py  strategy_compare.py  test_classification.py
plugins/synod/config/: model_matrix.json  synod-modes.yaml  synod-templates.yaml
plugins/synod/docs/research/: model-upgrade-research-20260308.md
plugins/synod/skills/: SYNOD_MODULARIZATION.md  cancel-synod.md  synod-setup.md  synod.md
plugins/synod/skills/cancel/: SKILL.md
plugins/synod/skills/modules/: synod-phase0-setup.md  synod-phase1-solver.md  synod-phase2-critic.md  synod-phase4-synthesis.md
plugins/synod/skills/setup/: SKILL.md
plugins/synod/skills/synod/: AGENTS.md  SKILL.md
plugins/synod/skills/synod-cancel/: SKILL.md
plugins/synod/skills/synod-setup/: SKILL.md
plugins/synod/tests/: AGENTS.md  README.md  __init__.py  conftest.py  test_base_provider.py  test_base_provider_integration.py  test_canary.py  test_classifier_config.py  test_cliproxy_cli.py  test_cutover_check.py  test_debate_gate.py  test_direct_cli_currency.py  test_env_override.py  test_evidence_first.py  test_gemini.py  test_ground_truth_probe.py  test_integration_orchestration.py  test_model_branding.py  test_model_branding_anon.py  test_model_stats.py  test_openai_cli.py  test_parser_research.py  test_phase4_branding.py  test_prompt_cache.py  test_prompt_linter.py  test_provider_backend.py  test_providers.py  test_strategy_compare.py  test_synod_config.py  test_synod_parser.py  test_synod_progress.py  test_synod_setup_routing.py  test_synod_skill_guards.py  test_tier_matrix.py  test_tier_routing.py  test_trust_scoring.py
plugins/synod/tests/archived/: test_canary.py  test_model_stats.py
plugins/synod/tools/: AGENTS.md  agy-cli  base_provider.py  cliproxy-cli.py  cutover.sh  cutover_check.py  debate_gate.py  deepseek-cli.py  gemini-3.py  grok-cli.py  ground_truth_probe.py  model_branding.py  openai-cli.py  openrouter-cli.py  prompt_linter.py  provider_backend.py  synod-classifier.py  synod-parser.py  synod-setup.py  synod_config.py  synod_progress.py  test_security.py  tier_matrix.py
plugins/synod/tools/archived/: canary.py  model_stats.py  synod-canary.py
(+236 files in other folders)
