[project]
name = "synod"
version = "3.2.0"
description = "Multi-agent deliberation system for Claude Code"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "quantsquirrel"}
]
requires-python = ">=3.9"
keywords = ["claude-code", "multi-agent", "debate", "llm", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "google-genai>=1.0.0",
    "openai>=1.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "responses>=0.25.0",
    "pytest-mock>=3.12.0",
]
benchmark = [
    "datasets>=2.14.0",
    "anthropic>=0.18.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/quantsquirrel/claude-synod-debate"
Repository = "https://github.com/quantsquirrel/claude-synod-debate"
Issues = "https://github.com/quantsquirrel/claude-synod-debate/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["tools*", "benchmark*"]
exclude = ["assets*", "skills*", "tests*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["synod"]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["union-attr", "call-overload", "return-value", "assignment"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["archived"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=tools --cov-report=term-missing"

[tool.coverage.run]
source = ["tools", "benchmark"]
omit = ["*/tests/*", "*/__pycache__/*", "tools/test_security.py", "tools/synod-setup.py", "tools/archived/*", "tools/providers/extended/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
